@@ -4,8 +4,11 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 exec_prefix_set=no
 
-usage="\
-Usage: pcre-config [--prefix] [--exec-prefix] [--version] [--libs] [--libs-posix] [--cflags] [--cflags-posix]"
+if test @enable_cpp@ = yes ; then
+  usage="Usage: pcre-config [--prefix] [--exec-prefix] [--version] [--libs] [--libs-posix] [--libs-cpp] [--cflags] [--cflags-posix]"
+else
+  usage="Usage: pcre-config [--prefix] [--exec-prefix] [--version] [--libs] [--libs-posix] [--cflags] [--cflags-posix]"
+fi
 
 if test $# -eq 0; then
       echo "${usage}" 1>&2
@@ -59,6 +62,13 @@ while test $# -gt 0; do
       ;;
     --libs)
       echo -L@libdir@$libR -lpcre
+      ;;
+    --libs-cpp)
+      if test @enable_cpp@ = yes ; then
+        echo -L@libdir@$libR -lpcrecpp -lpcre
+      else
+        echo "${usage}" 1>&2
+      fi
       ;;
     *)
       echo "${usage}" 1>&2
